--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -14,5 +14,5 @@
   <p>What coding language do you want to learn? Javascript, Python, or Processing?</p>
   <p>Take the <span class="tag">&lt;</span><span class="name">codr</span><span class="tag">quiz&gt;</span>
   and take the first step after Scratch.<p>
-  <button class="next" {{action 'start-quiz'}}>&gt;</button>
+  <button aria-label="Start Quiz" class="next" {{action 'startQuiz'}}>&gt;</button>
 </div>
