--- a/app/templates/quiz/question1.hbs
+++ b/app/templates/quiz/question1.hbs
@@ -1,1 +1,19 @@
-QUESTION 1
+<div class="question">
+  Question 1 here?
+</div>
+<ul class="answers">
+  <li class="answer-item">
+    <input class="answer-input" type="radio" name="quiz" id="answer1">
+    <label for="answer1">Answer One.</label>
+  </li>
+  <li class="answer-item">
+    <input class="answer-input" type="radio" name="quiz" id="answer2">
+    <label for="answer2">Answer Two.</label>
+  </li>
+  <li class="answer-item">
+    <input class="answer-input" type="radio" name="quiz" id="answer3">
+    <label for="answer3">Answer Three.</label>
+  </li>
+</ul>
+
+<button aria-label="Next" class="next" {{action 'next'}}>&gt;</button>
