--- a/app/templates/quiz/question1.hbs
+++ b/app/templates/quiz/question1.hbs
@@ -16,4 +16,4 @@
   </li>
 </ul>
 
-<button aria-label="Next" class="next" {{action 'next'}}>&gt;</button>
+<button aria-label="Next" class="next" {{action 'submit'}}>&gt;</button>
