--- a/app/styles/quiz.scss
+++ b/app/styles/quiz.scss
@@ -1,4 +1,21 @@
-.quiz-container {
+.quiz-result {
+  padding: 100px;
+  font-size: 44pt;
+  line-height: 53pt;
+
+  .result-language {
+    font-size: 164pt;
+    line-height: 200pt;
+  }
+  .tag {
+    color: $red;
+  }
+  .name {
+    font-family: $font-header-style;
+  }
+
+}
+.quiz {
   background: $blue;
   color: white;
   font-family: $font-normal-style;
@@ -20,6 +37,7 @@
       position: relative;
       margin: 30px 0;
       label {
+        display: inline-block;
         padding-left: 70px;
       }
       .answer-input:checked + label:before {
