--- a/app/styles/widgets.scss
+++ b/app/styles/widgets.scss
@@ -1,3 +1,17 @@
+@mixin nav-menu-buttons {
+  margin:0;
+  outline: none;
+  font-family: $font-body-style;
+  background: none;
+  border: none;
+  cursor: pointer;
+  &:active, &.selected {
+    cursor: default;
+    font-family: $font-header-style;
+  }
+}
+
+
 .next {
   position:absolute;
   bottom: $app-padding;
@@ -9,3 +23,5 @@
   cursor: pointer;
   outline: none;
 }
+
+
