--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,13 +1,13 @@
 <div class="title-container">
   <div class="title">
-    <span class="tag">&lt;</span><span class="name">codr</span><span class="tag">&gt;</span>
+    {{partial 'codr-logo'}}
   </div>
   <div class="tagline">&lt;moving from Scratch to code made easy and fun&gt;</div>
 </div>
 
 <div class="intro-container">
   <p class="lead"><span class="highlight">
-    <span class="tag">&lt;</span><span class="name">codr</span><span class="tag">&gt;</span>
+    {{partial 'codr-logo'}}
     </span>
   helps you take the next step.
   </p>
