--- a/app/templates/quiz/result.hbs
+++ b/app/templates/quiz/result.hbs
@@ -1,6 +1,5 @@
 Your next coding language is
 <div class="result-language">Javascript</div>
-Use <span class="tag">&lt;</span><span class="name">codr</span><span class="tag">&gt;</span>
-to see how it is different from Scratch.
+Use {{partial 'codr-logo'}} to see how it is different from Scratch.
 
-<button aria-label="Go to Javascript tutorial" class="next" {{action 'startJavascript'}}>&gt;</button>
+<button aria-label="Go to Javascript tutorial" class="next" {{action 'gotoJavascript'}}>&gt;</button>
