--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,8 +8,10 @@ $app-padding: 50px;
 
 @import 'home';
 @import 'quiz';
+@import 'tutorial';
 
 
-body {
+html, body {
+  height: 100%;
   margin: 0;
 }
