--- a/app/templates/javascript.hbs
+++ b/app/templates/javascript.hbs
@@ -1,2 +1,12 @@
-JAVASCRIPT
+<div class="header-bar">
+  <div class="codr-logo">
+    {{partial 'codr-logo'}}
+  </div>
+  <div class="language-menu">
+    <button class="language selected" aria-label="The currently selected language is javascript" disabled>javascript</button>
+    <button class="language" aria-label="select python language" action="gotoPython">python</button>
+    <button class="language" aria-label="select processing language" action="gotoProcessing">processing</button>
+  </div>
+</div>
+
 {{outlet}}
