tweaked code sample HTML

--- a/app/templates/reference/events.hbs
+++ b/app/templates/reference/events.hbs
@@ -29,11 +29,11 @@
       </ul>
     </div>
     <div class="code">
-      <code>
-        $(document).ready(function(){
+      <pre>
+$(document).ready(function(){
 
-        });
-      </code>
+});
+      </pre>
     </div>
   </div>
 </div>
