--- a/app/templates/reference.hbs
+++ b/app/templates/reference.hbs
@@ -1,6 +1,6 @@
 <div class="module-nav-bar">
   <button class="module selected" aria-label="Currently viewing block references module" disabled>block references</button>
-  <button class="module" aria-label="view examples module" action="gotoExamples">examples</button>
+  <button class="module" aria-label="view examples module" {{action "gotoExamples"}}>examples</button>
 </div>
 
 {{outlet}}
