--- a/app/templates/reference/events.hbs
+++ b/app/templates/reference/events.hbs
@@ -1,8 +1,8 @@
 <div class="topic-nav-bar">
   <button class="topic selected" aria-label="Currently viewing events topic" disabled>events</button>
-  <button class="topic" aria-label="view motion topic" action="gotoMotion">motion</button>
-  <button class="topic" aria-label="view control topic" action="gotoControl">control</button>
-  <button class="topic" aria-label="view operators topic" action="gotoOperators">operators</button>
+  <button class="topic" aria-label="view motion topic" {{action "gotoMotion"}}>motion</button>
+  <button class="topic" aria-label="view control topic" {{action "gotoControl"}}>control</button>
+  <button class="topic" aria-label="view operators topic" {{action "gotoOperators"}}>operators</button>
 </div>
 
 <div class="tutorial-container">
