--- a/app/templates/javascript.hbs
+++ b/app/templates/javascript.hbs
@@ -1,11 +1,11 @@
 <div class="header-bar">
-  <div class="codr-logo">
+  <button class="codr-logo" {{action "gotoHome"}} aria-label="Go to home">
     {{partial 'codr-logo'}}
-  </div>
+  </button>
   <div class="language-menu">
     <button class="language selected" aria-label="The currently selected language is javascript" disabled>javascript</button>
-    <button class="language" aria-label="select python language" action="gotoPython">python</button>
-    <button class="language" aria-label="select processing language" action="gotoProcessing">processing</button>
+    <button class="language" aria-label="select python language" {{action "gotoPython"}}>python</button>
+    <button class="language" aria-label="select processing language" {{action "gotoProcessing"}}>processing</button>
   </div>
 </div>
 
