--- a/app/templates/topic-item.hbs
+++ b/app/templates/topic-item.hbs
@@ -1,15 +1,8 @@
-<div class="topic-nav-bar">
-  <button class="topic selected" aria-label="Currently viewing events topic" disabled>events</button>
-  <button class="topic" aria-label="view motion topic" {{action "gotoMotion"}}>motion</button>
-  <button class="topic" aria-label="view control topic" {{action "gotoControl"}}>control</button>
-  <button class="topic" aria-label="view operators topic" {{action "gotoOperators"}}>operators</button>
-</div>
-
 <div class="tutorial-container">
   <div class="topic-items">
-    {{#each item in topicItems }}
-      {{#link-to 'topic-item' item class="topic-item"}}
-        <img {{ bind-attr src=item.imageUrl alt=item.title }}/>
+    {{#each topicItems }}
+      {{#link-to 'topic-item' this class="topic-item"}}
+        <img {{ bind-attr src=imageUrl alt=title }}/>
       {{/link-to}}
     {{/each}}
   </div>
@@ -22,12 +15,3 @@
     </div>
   </div>
 </div>
-
-<div class="scratch-footer">
-  scratch
-</div>
-<div class="codr-footer">
-  {{partial 'codr-logo'}}
-</div>
-
-
