--- a/app/templates/javascript.hbs
+++ b/app/templates/javascript.hbs
@@ -3,7 +3,7 @@
     {{partial 'codr-logo'}}
   </button>
   <div class="language-menu">
-    <button class="language selected" aria-label="The currently selected language is javascript" disabled>javascript</button>
+    <button class="language active" aria-label="The currently selected language is javascript" disabled>javascript</button>
     <button class="language" aria-label="select python language" {{action "gotoPython"}}>python</button>
     <button class="language" aria-label="select processing language" {{action "gotoProcessing"}}>processing</button>
   </div>
