--- a/app/styles/tutorial.scss
+++ b/app/styles/tutorial.scss
@@ -74,7 +74,7 @@
   border-right: 2px solid $blue;
   background: $light-blue;
   color: white;
-  &.selected {
+  &.active {
     background: $blue;
   }
   &:first-of-type {
