added topic items for all the block references

--- a/app/templates/topic.hbs
+++ b/app/templates/topic.hbs
@@ -4,7 +4,9 @@
   {{/each}}
 </div>
 
-  {{outlet}}
+  <div {{bind-attr class="topic.title :topic-container"}}>
+    {{outlet}}
+  </div>
 
   <div class="scratch-footer">
     scratch
