--- a/app/styles/tutorial.scss
+++ b/app/styles/tutorial.scss
@@ -102,7 +102,7 @@
   .topic-item {
     display:block;
     border-bottom: 1px solid $blue;
-    min-height: 105px;
+    min-height: 65px;
     padding: 25px;
     &:last-of-type {
       border-bottom: none;
@@ -111,6 +111,10 @@
       background: white;
     }
   }
+}
+
+.topic-container.operators .topic-items .topic-item {
+  min-height: 37px;
 }
 .stage {
   margin-left: 315px;
