added content for reference topic items

--- a/app/styles/widgets.scss
+++ b/app/styles/widgets.scss
@@ -9,7 +9,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  &:active, &.active {
+  &.active {
     cursor: default;
     font-family: $font-header-style;
   }
