--- a/app/styles/tutorial.scss
+++ b/app/styles/tutorial.scss
@@ -15,6 +15,7 @@
   .codr-logo {
     background: none;
     margin: 0;
+    padding: 0;
     outline: none;
     border: none;
     cursor: pointer;
@@ -38,6 +39,7 @@
     .language {
       min-width: 125px;
       color: $blue;
+      padding: 0;
       font-size: 18pt;
       @include nav-menu-buttons;
     }
@@ -47,6 +49,7 @@
 
 .module-nav-bar {
   margin-top: 36px;
+  margin-left: -7px;
 }
 
 .module {
@@ -91,11 +94,21 @@
   }
 }
 
+.motion.topic-container .topic-items {
+  min-height: 800px;
+}
+.events.topic-container .topic-items {
+  min-height: 580px;
+}
+.control.topic-container .topic-items {
+  min-height: 640px;
+}
+
 .topic-items {
   min-height: 600px;
   background: $lighter-blue;
   float:left;
-  width: 312px;
+  width: 250px;
   border-left: 1px solid $blue;
   border-right: 2px solid $blue;
 
@@ -117,13 +130,13 @@
   min-height: 37px;
 }
 .stage {
-  margin-left: 315px;
+  margin-left: 251px;
 }
 
 .how-it-works {
   padding: 25px 22px;
-  font-size: 16pt;
-  line-height: 22pt;
+  font-size: 13pt;
+  line-height: 20pt;
   border-bottom: 1px solid $blue;
 
   ul {
@@ -140,7 +153,7 @@
 .code {
   padding: 25px 22px;
   color: $dark-gray;
-  font-size: 15pt;
+  font-size: 13pt;
   line-height: 20pt;
 }
 
@@ -161,7 +174,7 @@
   }
 }
 .scratch-footer {
-  width: 311px;
+  width: 249px;
   float:left;
 }
 
