--- a/app/styles/tutorial.scss
+++ b/app/styles/tutorial.scss
@@ -155,6 +155,7 @@
   color: $dark-gray;
   font-size: 13pt;
   line-height: 20pt;
+  position:relative;
 }
 
 .codr-footer, .scratch-footer {
@@ -181,4 +182,26 @@
 .scratch-img-step {
   display: block;
   margin-bottom: -3px;
+}
+
+.try-it-button {
+  cursor: pointer;
+  outline: none;
+  background: none;
+  border: 1px solid $blue;
+  margin: 0;
+  padding: 0 20px;
+  top: -1px;
+  right: -1px;
+  position:absolute;
+  color: $light-red;
+  font-family: $font-header-style;
+  font-size: 13pt;
+  line-height: 23pt;
+}
+
+.try-it-frame {
+  width: 100%;
+  height: 400px;
+  border: 1px solid $blue;
 }
