--- a/app/templates/topic-item.hbs
+++ b/app/templates/topic-item.hbs
@@ -11,6 +11,21 @@
       {{ partial topicItem.instructionPartial }}
     </div>
     <div class="code">
+      {{#if topicItem.labUrl}}
+        {{#ic-modal-trigger controls="try-it" class="try-it-button"}}
+          Try it out
+        {{/ic-modal-trigger}}
+
+        {{#ic-modal id="try-it"}}
+        {{#ic-modal-title}}
+          <span class="try-it-title">
+            <span class="tag">&lt;</span><span class="name">codr</span><span class="text">lab</span><span class="tag">&gt;</span>
+          </span>
+        {{/ic-modal-title}}
+        <iframe class="try-it-frame" {{ bind-attr src=topicItem.labUrl }}/>
+        {{/ic-modal}}
+      {{/if}}
+
       {{ partial topicItem.examplePartial }}
     </div>
   </div>
