--- a/app/styles/widgets.scss
+++ b/app/styles/widgets.scss
@@ -29,6 +29,13 @@
 }
 .ic-modal-trigger.ic-modal-close {
   color: red;
+  outline: none;
+}
+
+.try-it-frame {
+  width: 100%;
+  height: 400px;
+  border: 1px solid $blue;
 }
 
 ic-modal {
