added all the labs

--- a/app/templates/content/topic-items/-motion-up-how-it-works.hbs
+++ b/app/templates/content/topic-items/-motion-up-how-it-works.hbs
@@ -8,5 +8,6 @@
   <li>We save the JQuery sprite object in a variable since we use it more than once. Its a good practice to prefix JQuery variables with a "$".</li>
   <li>We obtain the current position of the sprite using the JQuery position function</li>
   <li>We then use JQuery's css function to update the sprite's coordinates</li>
+  <li>You can also use a JQuery animate function instead of a JQuery css function to replicate Scratch's glide--why don't you try it out!</li>
 </ul>
 
