--- a/app/templates/content/topic-items/-operator-not-how-it-works.hbs
+++ b/app/templates/content/topic-items/-operator-not-how-it-works.hbs
@@ -2,5 +2,5 @@
 <ul>
   <li>Logical operators are very similar in Scratch and Javascript</li>
   <li>The not word in Scratch matches to the ! operator in Javascript</li>
-  <li>This can be used as !=== meaning "not equal to" in Javascript</li>
+  <li>This can be used as !== meaning "not equal to" in Javascript</li>
 </ul>
