reduced type size

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -12,7 +12,7 @@
   helps you take the next step.
   </p>
   <p>What coding language do you want to learn? Javascript, Python, or Processing?</p>
-  <p>Take the <span class="tag">&lt;</span><span class="name">codr</span>lab<span class="tag">quiz&gt;</span>
+  <p>Take the <span class="tag">&lt;</span><span class="name">codr</span><span class="tag">quiz&gt;</span>
   and take the first step after Scratch.</p>
   <button aria-label="Start Quiz" class="next" {{action 'startQuiz'}}>&gt;</button>
 </div>
