--- a/app/templates/module.hbs
+++ b/app/templates/module.hbs
@@ -4,6 +4,6 @@
   {{/each}}
 </div>
 
-<div {{ bind-attr class="module.title :module-container" }}>
+<div {{ bind-attr class="dasherizedTitle :module-container" }}>
   {{outlet}}
 </div>
