--- a/app/templates/topic.hbs
+++ b/app/templates/topic.hbs
@@ -4,7 +4,7 @@
   {{/each}}
 </div>
 
-<div {{bind-attr class="topic.title :topic-container"}}>
+<div {{bind-attr class="dasherizedTitle :topic-container"}}>
   {{outlet}}
 </div>
 
