--- a/app/templates/content/topic-items/-control-forever-loop-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-forever-loop-how-it-works.hbs
@@ -1,6 +1,13 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Flow control is managed by opening and closing braces { and }</li>
-  <li>The While statement in Javascript continues execution of the code in the braces until the condition is false</li>
-  <li>By putting the Boolean true in the while condition, it will never be false and so will run forever</li>
+  <li>In JavaScript, braces { and } are important. Make sure you have a closing "}" brace for every opening "{". 
+  Things will happen in the order they are inside of the braces, similar to the sequencing of blocks in Scratch.</li>
+  <li>Like Hat Blocks in Scratch, "event" in JavaScript makes things happen.</li>
+  <li>A key being pressed is the equivalent of an "event" in JavaScript.</li>
+  <li>Every key on the keyboard has a number in ASCII. The ASCII code for space is the number 32.</li>
 </ul>
+
+Play with codr: What happens if you change this to a different number?
+
+  
+  
