--- a/app/templates/content/topic-items/-control-if-else-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-if-else-how-it-works.hbs
@@ -1,5 +1,9 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Flow control is managed by opening and closing braces { and }</li>
-  <li>The condition returns True or False, the same as in Scratch.
+  <li>In JavaScript, braces { and } are important. Make sure you have a closing "}" brace for every opening "{". 
+  Things will happen in the order they are inside of the braces, similar to the sequencing of blocks in Scratch.</li>
+  <li>In Scratch we like using logic with the "if <> then... else": if something is true, 
+  run this bit of code otherwise “else” run this other code.</li>
+<li>Like Scratch these things will happen if something is True or False.</li>
 </ul>
+Play with codr: will something in "else" happen if "if" is true?
