--- a/app/templates/content/topic-items/-control-repeat-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-repeat-how-it-works.hbs
@@ -1,10 +1,12 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Flow control is managed by opening and closing braces { and }</li>
-  <li>The for loop is broken into 3 elements separated by semicolons ;</li>
-  <li>The first piece: i = 0, initializes the variable i to 0</li>
-  <li>The second piece: i &lt; 10 is the condition for the loop to continue</li>
-  <li>The third piece: i++ (which means i = i + 1) is the step that needs to occur each time through the loop</li>
-  <li>The end result is that the loop will be executed 10 times, and the variable i will be
-  available inside the braces and will iterate from 0 to 9 with the loop cycle</li>
+   <li>In JavaScript, braces { and } are important. Make sure you have a closing "}" brace for every opening "{". 
+  Things will happen in the order they are inside of the braces, similar to the sequencing of blocks in Scratch.</li>
+  <li>In Scratch we tell it to repeating for a number of times, in JavaScript we use “int” and math.</li>
+  <li>Int is short for integer, this temporarily stores a value.</li>
+  <li>At the beginning of this loop, "i=0"</li>
+  <li>Each time this loop runs the "i++" adds 1 more to "i".</li>
+  <li>This loop will stop when “i<10”, this means the loop will run 10 times.</li>
+
 </ul>
+  Play with {{partial ‘codr-logo’}}: How many times will this run if you change the "i=0;i<10" to different values? 
