--- a/app/templates/content/topic-items/-control-forever-loop-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-forever-loop-how-it-works.hbs
@@ -7,7 +7,7 @@
   <li>Every key on the keyboard has a number in ASCII. The ASCII code for space is the number 32.</li>
 </ul>
 
-Play with codr: What happens if you change this to a different number?
+Play with {{partial ‘codr-logo’}}: What happens if you change this to a different number?
 
   
   
