--- a/app/templates/content/topic-items/-control-if-else-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-if-else-how-it-works.hbs
@@ -6,4 +6,4 @@
   run this bit of code otherwise “else” run this other code.</li>
 <li>Like Scratch these things will happen if something is True or False.</li>
 </ul>
-Play with codr: will something in "else" happen if "if" is true?
+Play with {{partial ‘codr-logo’}}: will something in "else" happen if "if" is true?
