--- a/app/templates/content/topic-items/-control-wait-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-wait-how-it-works.hbs
@@ -1,9 +1,7 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Flow control is managed by opening and closing braces { and }</li>
-  <li>The setTimout funcion in Javascript is used to create a new thread of execution that begins
-  after a specifed delay</li>
-  <li>The units of delay are milliseconds, so we need to delay for 1000 milliseconds</li>
-  <li>Any code that you put within the setTimeout block will start executing after the specified delay</li>
-  <li>Any code outside of the setTimeout block remains in the current thread of execution and is uneffected by the setTimeout delay</li>
-</ul>
+<li>In Scratch we use "wait". This is called "sleep" in Javascript.</li>
+<li>Instead of counting in seconds, "sleep" counts in milliseconds.  If we want to wait for 1 second that is 1000 milliseconds.</li>
+<li>Like "wait" in Scratch, "sleep" in Javascript keeps the next thing from happening until time passes.</li>
+  </ul>
+Play with {{partial ‘codr-logo’}}: What would happen if you wait for longer than 1000?
