--- a/app/templates/content/topic-items/-event-green-flag-how-it-works.hbs
+++ b/app/templates/content/topic-items/-event-green-flag-how-it-works.hbs
@@ -1,7 +1,8 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Flow control is managed by opening and closing braces { and }.</li>
-  <li>Events are used in Javascript to control interactions with the user</li>
-  <li>The event here is the document completing loading. This is the start of the event tree ￼￼in Javascript</li>
-  <li>The document loading is the equivalent of the start flag being clicked in Scratch</li>
-</ul>
+   <li>In JavaScript, braces { and } are important. Make sure you have a closing "}" brace for every opening "{". 
+  Things will happen in the order they are inside of the braces, similar to the sequencing of blocks in Scratch.</li>
+  <li>Like Hat Blocks in Scratch, "event" in JavaScript makes things happen.</li>
+  <li>In JavaScript ".ready" is similar to "when the green flag is clicked" in Scratch. 
+  This will load everything under it at the start of the project.</li>
+  </ul>
