--- a/app/templates/content/topic-items/-event-space-key-how-it-works.hbs
+++ b/app/templates/content/topic-items/-event-space-key-how-it-works.hbs
@@ -1,8 +1,11 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Flow control is managed by opening and closing braces { and }.</li>
-  <li>Events are used in Javascript to control interactions with the user</li>
-  <li>A key being pressed is the equivalent of an "event"</li>
-  <li>The event is captured and tested</li>
-  <li>The number 32 represents the spacebar in javascript (32 is the ASCII code for a space character)</li>
+ <li>In JavaScript, braces { and } are important. Make sure you have a closing "}" brace for every opening "{". 
+  Things will happen in the order they are inside of the braces, similar to the sequencing of blocks in Scratch.</li>
+<li>Like Hat Blocks in Scratch, "event" in JavaScript makes things happen.</li>
+
+<li>A key being pressed is the equivalent of an "event" in JavaScript.</li>
+
+<li>Every key on the keyboard has a number in ASCII. The ASCII code for space is the number 32.</li>
 </ul>
+Play with {{partial ‘codr-logo’}}: What happens if you change this to a different number?
