--- a/app/templates/content/topic-items/-control-forever-loop-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-forever-loop-how-it-works.hbs
@@ -2,12 +2,11 @@
 <ul>
   <li>In JavaScript, braces { and } are important. Make sure you have a closing "}" brace for every opening "{". 
   Things will happen in the order they are inside of the braces, similar to the sequencing of blocks in Scratch.</li>
-  <li>Like Hat Blocks in Scratch, "event" in JavaScript makes things happen.</li>
-  <li>A key being pressed is the equivalent of an "event" in JavaScript.</li>
-  <li>Every key on the keyboard has a number in ASCII. The ASCII code for space is the number 32.</li>
+<li>"While" in JavaScript is similar to "forever" in Scratch. 
+It will continue doing whatever is inside the loop until it is false.</li>
+<li>As long as the word inside the parenthesis is "true", this loop will happen forever. </li>
 </ul>
-
-Play with {{partial ‘codr-logo’}}: What happens if you change this to a different number?
+Play with {{partial ‘codr-logo’}}: What would happen if this became "false"?
 
   
   
