--- a/app/templates/content/topic-items/-control-repeat-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-repeat-how-it-works.hbs
@@ -6,7 +6,7 @@
   <li>Int is short for integer, this temporarily stores a value.</li>
   <li>At the beginning of this loop, "i=0"</li>
   <li>Each time this loop runs the "i++" adds 1 more to "i".</li>
-  <li>This loop will stop when “i<10”, this means the loop will run 10 times.</li>
+  <li>This loop will stop when "i<10", this means the loop will run 10 times.</li>
 
 </ul>
   Play with {{partial ‘codr-logo’}}: How many times will this run if you change the "i=0;i<10" to different values? 
