--- a/app/templates/content/topic-items/-event-sprite-click-how-it-works.hbs
+++ b/app/templates/content/topic-items/-event-sprite-click-how-it-works.hbs
@@ -1,7 +1,8 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Flow control is managed by opening and closing braces { and }.</li>
-  <li>Events are used in Javascript to control interactions with the user</li>
-  <li>In this example we are using JQuery to identify the sprite by it's HTML class name and registering a click handler</li>
-  <li>When the sprite is clicked, the code inside the braces is called</li>
+   <li>In JavaScript, braces { and } are important. Make sure you have a closing "}" brace for every opening "{". 
+  Things will happen in the order they are inside of the braces, similar to the sequencing of blocks in Scratch.</li>
+  <li>Like Hat Blocks in Scratch, "event" in JavaScript makes things happen.</li>
+  <li>Objects in JavaScript, like sprites in Scratch, can listen for things to happen and react.</li>
+  <li>When "thisSprite" is clicked, the code inside the braces will happen.</li>
 </ul>
