--- a/app/templates/content/topic-items/-motion-down-how-it-works.hbs
+++ b/app/templates/content/topic-items/-motion-down-how-it-works.hbs
@@ -1,12 +1,15 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Javascript works on a coordiate basis, where the origin is in the top left corner of the window, where the X axis is the horizontal axis with increases as you go to the right and the Y axis is the vertical axis which increases as you go down.</li>
-  <li>Pixels are small, so here we have made 10 pixel equal to 1 step.</li>
-  <li>To move 10 steps, we increase the pixel count by 10 x 10 = 100</li>
-  <li>To move in the scratch direction 180, we increase the y coordinate</li>
-  <li>We save the JQuery sprite object in a variable since we use it more than once. Its a good practice to prefix JQuery variables with a "$".</li>
+  <li>JavaScript moves in terms of pixels. Pixels are tiny. 10 steps in Scratch is 100 pixels in JavaScript.</li>
+  <li>JavaScript is on the coordinate plane. Like Scratch, there is an X and Y axis.</li>
+  <li>To move to the down which is "point in direction 180 in Scratch, we subtract from Y of the sprite.</li>
+  <li>We save the location of the sprite as a variable in JQuery because we use the location more than once.
+  In JQuery variables generally start with a "$".</li>
   <li>We obtain the current position of the sprite using the JQuery position function</li>
   <li>We then use JQuery's css function to update the sprite's coordinates</li>
-  <li>You can also use a JQuery animate function instead of a JQuery css function to replicate Scratch's glide--why don't you try it out!</li>
+
 </ul>
+Play with {{partial ‘codr-logo’}}: How can you move up in JavaScript?</ br>
+If you would like to replicate Scratch's "glide" try the JQuery animate function.
+
 
