--- a/app/templates/content/topic-items/-motion-left-how-it-works.hbs
+++ b/app/templates/content/topic-items/-motion-left-how-it-works.hbs
@@ -2,6 +2,11 @@
 <ul>
   <li>JavaScript moves in terms of pixels. Pixels are tiny. 10 steps in Scratch is 100 pixels in JavaScript.</li>
   <li>JavaScript is on the coordinate plane. Like Scratch, there is an X and Y axis.</li>
-  <li>To move to the left which is “point in direction -90” in Scratch, we subtract from X.
+  <li>To move to the left which is “point in direction -90” in Scratch, we subtract from X of the sprite.</li>
+  <li>We save the location of the sprite as a variable in JQuery because we use the location more than once.
+  In JQuery variables generally start with a "$".</li>
+  <li>We obtain the current position of the sprite using the JQuery position function</li>
+  <li>We then use JQuery's css function to update the sprite's coordinates</li>
   </ul>
 Play with {{partial ‘codr-logo’}}: How can you move to the right in JavaScript?
+If you would like to replicate Scratch's "glide" try the JQuery animate function.
