--- a/app/templates/content/topic-items/-motion-up-how-it-works.hbs
+++ b/app/templates/content/topic-items/-motion-up-how-it-works.hbs
@@ -3,7 +3,7 @@
 <ul>
   <li>JavaScript moves in terms of pixels. Pixels are tiny. 10 steps in Scratch is 100 pixels in JavaScript.</li>
   <li>JavaScript is on the coordinate plane. Like Scratch, there is an X and Y axis.</li>
-  <li>To move to the up which is “point in direction 0” in Scratch, we add to Y.</li>
+  <li>To move to the up which is "point in direction 0" in Scratch, we add to Y.</li>
 </ul>
 Play with {{partial ‘codr-logo’}}: How can you move down in JavaScript?
 
