--- a/app/templates/content/topic-items/-motion-up-how-it-works.hbs
+++ b/app/templates/content/topic-items/-motion-up-how-it-works.hbs
@@ -5,6 +5,7 @@
   <li>JavaScript is on the coordinate plane. Like Scratch, there is an X and Y axis.</li>
   <li>To move to the up which is "point in direction 0" in Scratch, we add to Y.</li>
 </ul>
-Play with {{partial ‘codr-logo’}}: How can you move down in JavaScript?
+Play with {{partial ‘codr-logo’}}: How can you move down in JavaScript?</br>
+If you would like to replicate Scratch's "glide" try the JQuery animate function.
 
 
