--- a/app/templates/content/topic-items/-operator-and-how-it-works.hbs
+++ b/app/templates/content/topic-items/-operator-and-how-it-works.hbs
@@ -1,6 +1,7 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Logical operators are very similar in Scratch and Javascript</li>
-  <li>The and word in Scratch matches to the &amp;&amp; operator in Javascript</li>
-  <li>The &amp; operator in Javascript is a bitwise comparison, which does not exist in Scratch</li>
+  <li>Logic in Scratch is very similar to JavaScript</li>
+  <li>The "__ and ___" block in Scratch matches to the  &amp;&amp; operator in JavaScript.</li>
+  <li>Like in Scratch this will combine the two things together.</li>
 </ul>
+Note: The  &amp; operator in Javascript is a comparison which does not exist in Scratch.
