--- a/app/templates/content/topic-items/-operator-equals-how-it-works.hbs
+++ b/app/templates/content/topic-items/-operator-equals-how-it-works.hbs
@@ -1,7 +1,9 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Logical operators are very similar in Scratch and Javascript</li>
-  <li>The = sign in Javascript is used for assigment only</li>
-  <li>The == sign in Javascript is not a strict comparison</li>
-  <li>The === sign in Javascript is the equivalent of = in Scratch</li>
+  <li>Like in Scratch, Logical Operators go anywhere we need to know if something is True or False.</li>
+  <li>Unlike Scratch, we need to use 3 equals signs to equal one "="</li>
+  In this case, X equals Y. But X is not replacing the value of Y.
+  <li>In JavaScript The "=" sign in Javascript is only used to store a value. X=2 means that X has a value of two.</li>
+  <li>The == sign in Javascript is not strict comparison. Thus If X equals 2 and Y equals 3, X==Y would be False. 
+  In this example, X and Y are not equal.</li>
 </ul>
