--- a/app/templates/content/topic-items/-operator-greater-than-how-it-works.hbs
+++ b/app/templates/content/topic-items/-operator-greater-than-how-it-works.hbs
@@ -1,6 +1,6 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Logical operators are very similar in Scratch and Javascript</li>
-  <li>Logical operators can be placed anywhere that a Boolean is required</li>
-  <li>The greater than sign is identical</li>
+<li>Logic in Scratch is very similar to JavaScript.</li>
+<li>Like in Scratch, Logical Operators go anywhere we need to know if something is True or False.</li>
+<li>X is greater than Y</li>
 </ul>
