--- a/app/templates/javascript.hbs
+++ b/app/templates/javascript.hbs
@@ -2,11 +2,7 @@
   <button class="codr-logo" {{action "gotoHome"}} aria-label="Go to home">
     {{partial 'codr-logo'}}
   </button>
-  <div class="language-menu">
-    <button class="language active" aria-label="The currently selected language is javascript" disabled>javascript</button>
-    <button class="language" aria-label="select python language" {{action "gotoPython"}}>python</button>
-    <button class="language" aria-label="select processing language" {{action "gotoProcessing"}}>processing</button>
-  </div>
+  <span class="language">javascript</span>
 </div>
 
 {{outlet}}
