fixed codr partials

--- a/app/templates/content/topic-items/-control-repeat-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-repeat-how-it-works.hbs
@@ -9,4 +9,4 @@
   <li>This loop will stop when "i<10", this means the loop will run 10 times.</li>
 
 </ul>
-  Play with {{partial ‘codr-logo’}}: How many times will this run if you change the "i=0;i<10" to different values? 
+  Play with {{partial 'codr-logo'}}: How many times will this run if you change the "i=0;i<10" to different values? 
