--- a/app/templates/content/topic-items/-control-wait-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-wait-how-it-works.hbs
@@ -4,4 +4,4 @@
 <li>Instead of counting in seconds, "sleep" counts in milliseconds.  If we want to wait for 1 second that is 1000 milliseconds.</li>
 <li>Like "wait" in Scratch, "sleep" in Javascript keeps the next thing from happening until time passes.</li>
   </ul>
-Play with {{partial ‘codr-logo’}}: What would happen if you wait for longer than 1000?
+Play with {{partial 'codr-logo'}}: What would happen if you wait for longer than 1000?
