--- a/app/templates/content/topic-items/-motion-down-how-it-works.hbs
+++ b/app/templates/content/topic-items/-motion-down-how-it-works.hbs
@@ -8,7 +8,7 @@
   <li>We obtain the current position of the sprite using the JQuery position function</li>
   <li>We then use JQuery's css function to update the sprite's coordinates</li>
 </ul>
-Play with {{partial ‘codr-logo’}}: How can you move up in JavaScript?</ br>
+Play with {{partial 'codr-logo'}}: How can you move up in JavaScript?</ br>
 If you would like to replicate Scratch's "glide" try the JQuery animate function.
 
 
