--- a/app/templates/content/topic-items/-motion-left-how-it-works.hbs
+++ b/app/templates/content/topic-items/-motion-left-how-it-works.hbs
@@ -8,5 +8,5 @@
   <li>We obtain the current position of the sprite using the JQuery position function</li>
   <li>We then use JQuery's css function to update the sprite's coordinates</li>
   </ul>
-Play with {{partial ‘codr-logo’}}: How can you move to the right in JavaScript?
+Play with {{partial 'codr-logo'}}: How can you move to the right in JavaScript?
 If you would like to replicate Scratch's "glide" try the JQuery animate function.
