--- a/app/templates/content/topic-items/-operator-or-how-it-works.hbs
+++ b/app/templates/content/topic-items/-operator-or-how-it-works.hbs
@@ -1,6 +1,5 @@
 <div class="header">How it works</div>
 <ul>
-  <li>Logical operators are very similar in Scratch and Javascript</li>
-  <li>The or word in Scratch matches to the || operator in Javascript</li>
-  <li>The | operator in Javascript is a bitwise comparison, which does not exist in Scratch</li>
+<li>The "__ or __" block in Scratch matches to the || operator in JavaScript.</li>
+<li>The "|" operator in Javascript is a comparison which does not exist in Scratch.</li>
 </ul>
