--- a/app/templates/content/code-snippets/-example1-start-activity.hbs
+++ b/app/templates/content/code-snippets/-example1-start-activity.hbs
@@ -1,9 +1,8 @@
 <div class="header">Program 1</div>
-<div class="sub-header">Click on the Scratch block to view its equivalent in Javascript</div>
+<div class="sub-header">Click on the Scratch block to see how it works in Javascript</div>
 <div>
-  The green flag block is the trigger that is used to start the Scratch program. In Javascript
-  we can use the JQuery $(document).ready() function to determine when the web page has
-  finished loading--which is when we want to start executing Javascript on the web page. 
-  All the code that we want to execute is placed within the curly braces { and }.
+  In Scratch, "when the green flag is clicked" block is used to start projects in Scratch. 
+  In Javascript, the JQuery "$(document).ready()" function starts after the web page is loaded.
+  All the code that we want to run is organized between the curly braces "{" and "}".
 </div>
 
